--- a/controller.html
+++ b/controller.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="./scripts/controller/main.js"></script>
   </head>
   <body>
-    
+    <canvas id="canvas"></canvas>
     <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
   </body>
 </html>
