--- a/screen.html
+++ b/screen.html
@@ -11,6 +11,7 @@
       <div id="wait"></div>
     </div>
     <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
+    <script type="text/javascript" src="./scripts/screen/car.js"></script>
     <script type="text/javascript" src="./scripts/screen/main.js"></script>
   </body>
 </html>
