--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <canvas id="cnv"></canvas>
     <script src="engine/assets.js"></script>
     <script src="engine/entity.js"></script>
+    <script src="engine/renderer.js"></script>
     <script src="scene.js"></script>
     <script src="engine/model.js"></script>
     <script src="main.js"></script>
