--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="engine/assets.js"></script>
     <script src="engine/entity.js"></script>
     <script src="engine/renderer.js"></script>
+    <script src="engine/math.js"></script>
     <script src="scene.js"></script>
     <script src="engine/model.js"></script>
+    <script src="box.js"></script>
     <script src="main.js"></script>
   </body>
